Patching of ChoiceTasks